# tat

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json  v2.json
src-tauri/icons/: icon.icns
src-tauri/lang/: en-us.json
src-tauri/src/: lib.rs  main.rs
src/assets/localization/: en-us.jsonc  languages.json
src/assets/themes/: _readme.md  debug.json  default-dark.json  default-light.json  default.json  mothership-dark.json  mothership-light.json  solarized-dark.json  solarized-light.json  warped-beyond-recognition.json  warped.json
src/lib/: Greet.svelte  filetypes.ts  getRandomPointInViewport.ts  iconAdd.svelte  iconAudio.svelte  iconLoop.svelte  iconPlay.svelte  iconSave.svelte  init.setupListener.ts  init.setupMap.ts  input.loadFile.ts  input.loadImage.ts  input.loadProject.ts  input.loadSound.ts  input.newProject.ts  input.readAudioFile.ts  input.readFiles.ts  input.readImageFile.ts  input.removeSound.ts  loadProject.ts  media.controlMedia.ts  media.controlOpacity.ts  media.controlSound.ts  media.loadFile.ts  media.loadImage.ts  media.loadSound.ts  media.manageSounds.ts  media.mixSound.ts  media.readFiles.ts  media.remove.ts  media.removeImage.ts  media.removeSelected.ts  media.removeSound.ts  media.setCanvasSoundVolumes.ts  media.setMapSoundVolumes.ts  menu.about.ts  menu.modals.ts  menus.ts  output.saveProject.ts  pointPolyDistance.ts  (+37 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
(+109 files in other folders)
